# PD

./: README.md  animation.py  animation2.py  animation3.py  checkColor.py  readfile.py  readfile2.py  regulari.py  sample-xy.cpp  test2_array.cpp  test3_array.cpp  test_array.cpp  test_vector.cpp  vector.cpp
Dev/: animation-correlation.py  calc-T-dependence-on-stat-value.cpp  calc-T-dependence-on-stat-value0.cpp
TempertureDependence/: calc-T-dependence-on-stat-value.cpp
compleat-visual/: gen-data-octahedral.py  gen-data-pyramid.py
compleate/: gen-data-triangle.py  ising-sendsen-wang-2D.cpp  ising-swendsen-wang-3D.cpp  lattice-networkx.py  potts-T-dependency-SW-2D.cpp  potts-T-dependency.cpp  sample-potts.cpp  test-balls.py  union-find.cpp  visualize-3D-points.py
compleate-visual-XYmodel/: XY-animation.py  XY-picture.py  animation.py  gen-xy-detect-vortexes.cpp  gen-xy-random-field-3D.cpp  simple-visual-3D.py  simple-visual.py  test_vector.cpp  wang-landau.cpp
ising/: ising-sendsen-wang-2D.cpp  ising-sendsen-wang-3D.cpp
xymodel-0.1/: Makefile  Makefile.in  Tc.sh  config.h  config.h.in  config.status  configure  configure.ac  correlation.c  energy.sh  energyField.c  energyplot.gnu  glvec.c  gnuplotvectors.c  helicity.c  init.c  lattice.c  lattice.h  makeVortex.c  mc_plugs.h  mcrun.c  mcrun.h  progress.c  run.sh  stiffness.sh  vortex.c  vortex.h  writelattice.c  xymodel.c  xymodel.h
xymodel-0.1/plot/: correlation.R  energy.gpi  helicity.gpi
xymodel-0.1/plugin/: plugin.h
xymodel-0.1/test/: avg.0  avg.2  l.0  l.2  l.init  l.rnd  test.sh  vort.0
